Fixed vertical alignment for small-text fields (EDDACP-32)
EDDACP-32 #time 5m

--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -20,6 +20,7 @@ div.edd-acp-colorpicker > div.edd-acp-colorpicker-preview {
 
 input.small-text {
     width: 80px;
+    vertical-align: middle;
 }
 
 #wp-admin-bar-edd-acp-preview-admin-bar a.ab-item:before {
